--- a/demo_notebooks/0_setup.ipynb
+++ b/demo_notebooks/0_setup.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mm-aml-wksp\n"
+     ]
+    }
+   ],
    "source": [
     "# Load environment variables from .env file\n",
     "import os\n",
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +84,7 @@
     "from azureml.opendatasets import OjSalesSimulated\n",
     "import os\n",
     "\n",
-    "DATASET_MAX_FILES = 15\n",
+    "DATASET_MAX_FILES = 15 # edit this field to download up to 11,973 files (Each file is a SKU/Store combination; You will fit 1 model per file)\n",
     "\n",
     "local_path = \"../data/oj_sim_sales\"\n",
     "if not os.path.exists(local_path):\n",
