--- a/demo_notebooks/0_setup.ipynb
+++ b/demo_notebooks/0_setup.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,14 +77,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "# edit this field to download up to 11,973 files (Each file is a SKU/Store combination; You will fit 1 model per file)\n",
+    "DATASET_MAX_FILES = 15 \n",
+    "\n",
+    "# set the version number of the data asset to the current UTC time\n",
+    "v1 = time.strftime(\"%Y.%m.%d.%H%M%S\", time.gmtime())\n",
+    "data_name = \"oj-simulated-sales-data\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from azureml.opendatasets import OjSalesSimulated\n",
     "import os\n",
-    "\n",
-    "DATASET_MAX_FILES = 15 # edit this field to download up to 11,973 files (Each file is a SKU/Store combination; You will fit 1 model per file)\n",
     "\n",
     "local_path = \"../data/oj_sim_sales\"\n",
     "if not os.path.exists(local_path):\n",
@@ -104,9 +118,7 @@
     "from azure.ai.ml.constants import AssetTypes\n",
     "import time \n",
     "\n",
-    "# set the version number of the data asset to the current UTC time\n",
-    "v1 = time.strftime(\"%Y.%m.%d.%H%M%S\", time.gmtime())\n",
-    "data_name = \"oj-simulated-sales-data\"\n",
+    "\n",
     "my_data = Data(\n",
     "    name=data_name,\n",
     "    version=v1,\n",
@@ -123,15 +135,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zacksoenen/miniconda3/envs/many_models/lib/python3.8/site-packages/azureml/dataprep/api/_dataframereader.py:404: FutureWarning: promote has been superseded by mode='default'.\n",
+      "  dataframe = dataframe_reader.complete_incoming_dataframe(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WeekStarting</th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Brand</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Advert</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1990-06-14</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>dominicks</td>\n",
+       "      <td>12003</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>31087.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1990-06-21</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>dominicks</td>\n",
+       "      <td>10239</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.39</td>\n",
+       "      <td>24471.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1990-06-28</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>dominicks</td>\n",
+       "      <td>17917</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.48</td>\n",
+       "      <td>44434.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1990-07-05</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>dominicks</td>\n",
+       "      <td>14218</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.33</td>\n",
+       "      <td>33127.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1990-07-12</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>dominicks</td>\n",
+       "      <td>15925</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>32009.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1990-07-19</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>dominicks</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>38734.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1990-07-26</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>dominicks</td>\n",
+       "      <td>10576</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.97</td>\n",
+       "      <td>20834.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1990-08-02</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>dominicks</td>\n",
+       "      <td>9912</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.26</td>\n",
+       "      <td>22401.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1990-08-09</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>dominicks</td>\n",
+       "      <td>9571</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.11</td>\n",
+       "      <td>20194.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1990-08-16</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>dominicks</td>\n",
+       "      <td>15748</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.42</td>\n",
+       "      <td>38110.16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  WeekStarting  Store      Brand  Quantity  Advert  Price   Revenue\n",
+       "0   1990-06-14   1000  dominicks     12003    True   2.59  31087.77\n",
+       "1   1990-06-21   1000  dominicks     10239    True   2.39  24471.21\n",
+       "2   1990-06-28   1000  dominicks     17917    True   2.48  44434.16\n",
+       "3   1990-07-05   1000  dominicks     14218    True   2.33  33127.94\n",
+       "4   1990-07-12   1000  dominicks     15925    True   2.01  32009.25\n",
+       "5   1990-07-19   1000  dominicks     17850    True   2.17  38734.50\n",
+       "6   1990-07-26   1000  dominicks     10576    True   1.97  20834.72\n",
+       "7   1990-08-02   1000  dominicks      9912    True   2.26  22401.12\n",
+       "8   1990-08-09   1000  dominicks      9571    True   2.11  20194.81\n",
+       "9   1990-08-16   1000  dominicks     15748    True   2.42  38110.16"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
+    "import mltable\n",
     "data_asset = ml_client.data.get(data_name, label=\"latest\")\n",
-    "print(data_asset.path)\n",
-    "df = pd.read_csv(data_asset.path)\n",
+    "\n",
+    "path = {\n",
+    "  'folder': data_asset.path\n",
+    "}\n",
+    "\n",
+    "tbl = mltable.from_delimited_files(paths=[path])\n",
+    "df = tbl.to_pandas_dataframe()\n",
     "display(df.head(10))"
    ]
   },
