updates to model analysis and best version gathering

--- a/demo_notebooks/1_training_pipeline.ipynb
+++ b/demo_notebooks/1_training_pipeline.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -534,48 +534,82 @@
        "      <th>artifact_uri</th>\n",
        "      <th>start_time</th>\n",
        "      <th>end_time</th>\n",
-       "      <th>tags.mlflow.parentRunId</th>\n",
-       "      <th>tags.mlflow.rootRunId</th>\n",
+       "      <th>metrics.training_mse</th>\n",
+       "      <th>metrics.training_score</th>\n",
+       "      <th>metrics.training_mae</th>\n",
+       "      <th>metrics.training_rmse</th>\n",
+       "      <th>...</th>\n",
+       "      <th>params.min_samples_leaf</th>\n",
+       "      <th>params.max_leaf_nodes</th>\n",
+       "      <th>params.min_samples_split</th>\n",
+       "      <th>tags.store</th>\n",
        "      <th>tags.mlflow.runName</th>\n",
+       "      <th>tags.estimator_name</th>\n",
+       "      <th>tags.brand</th>\n",
+       "      <th>tags.mlflow.rootRunId</th>\n",
        "      <th>tags.mlflow.user</th>\n",
+       "      <th>tags.estimator_class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>93cf3817-78ea-43a4-bc25-4a1d367e288c</td>\n",
+       "      <td>8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd</td>\n",
        "      <td>e7fcc503-1735-43d4-9298-1228018a7232</td>\n",
        "      <td>FINISHED</td>\n",
        "      <td></td>\n",
-       "      <td>2023-12-21 22:15:07.624000+00:00</td>\n",
-       "      <td>2023-12-21 22:15:10.677000+00:00</td>\n",
+       "      <td>2023-12-21 22:15:01.902000+00:00</td>\n",
+       "      <td>2023-12-21 22:15:11.010000+00:00</td>\n",
+       "      <td>1.534044e+06</td>\n",
+       "      <td>0.979091</td>\n",
+       "      <td>989.14651</td>\n",
+       "      <td>1238.565122</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>train_1013_tropicana</td>\n",
+       "      <td>GradientBoostingRegressor</td>\n",
+       "      <td>tropicana</td>\n",
        "      <td>8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd</td>\n",
-       "      <td>8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd</td>\n",
-       "      <td>register_1013_tropicana</td>\n",
        "      <td>Zack Soenen</td>\n",
+       "      <td>sklearn.ensemble.gradient_boosting.GradientBoo...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1 rows × 42 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                 run_id                         experiment_id  \\\n",
-       "0  93cf3817-78ea-43a4-bc25-4a1d367e288c  e7fcc503-1735-43d4-9298-1228018a7232   \n",
+       "0  8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd  e7fcc503-1735-43d4-9298-1228018a7232   \n",
        "\n",
        "     status artifact_uri                       start_time  \\\n",
-       "0  FINISHED              2023-12-21 22:15:07.624000+00:00   \n",
+       "0  FINISHED              2023-12-21 22:15:01.902000+00:00   \n",
        "\n",
-       "                          end_time               tags.mlflow.parentRunId  \\\n",
-       "0 2023-12-21 22:15:10.677000+00:00  8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd   \n",
+       "                          end_time  metrics.training_mse  \\\n",
+       "0 2023-12-21 22:15:11.010000+00:00          1.534044e+06   \n",
        "\n",
-       "                  tags.mlflow.rootRunId      tags.mlflow.runName  \\\n",
-       "0  8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd  register_1013_tropicana   \n",
+       "   metrics.training_score  metrics.training_mae  metrics.training_rmse  ...  \\\n",
+       "0                0.979091             989.14651            1238.565122  ...   \n",
        "\n",
-       "  tags.mlflow.user  \n",
-       "0      Zack Soenen  "
+       "   params.min_samples_leaf  params.max_leaf_nodes  params.min_samples_split  \\\n",
+       "0                        1                   None                         2   \n",
+       "\n",
+       "  tags.store   tags.mlflow.runName        tags.estimator_name tags.brand  \\\n",
+       "0       1013  train_1013_tropicana  GradientBoostingRegressor  tropicana   \n",
+       "\n",
+       "                  tags.mlflow.rootRunId tags.mlflow.user  \\\n",
+       "0  8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd      Zack Soenen   \n",
+       "\n",
+       "                                tags.estimator_class  \n",
+       "0  sklearn.ensemble.gradient_boosting.GradientBoo...  \n",
+       "\n",
+       "[1 rows x 42 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,107 +631,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>run_id</th>\n",
-       "      <th>experiment_id</th>\n",
-       "      <th>status</th>\n",
-       "      <th>artifact_uri</th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>end_time</th>\n",
-       "      <th>tags.mlflow.parentRunId</th>\n",
-       "      <th>tags.mlflow.rootRunId</th>\n",
-       "      <th>tags.mlflow.runName</th>\n",
-       "      <th>tags.mlflow.user</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>93cf3817-78ea-43a4-bc25-4a1d367e288c</td>\n",
-       "      <td>e7fcc503-1735-43d4-9298-1228018a7232</td>\n",
-       "      <td>FINISHED</td>\n",
-       "      <td></td>\n",
-       "      <td>2023-12-21 22:15:07.624000+00:00</td>\n",
-       "      <td>2023-12-21 22:15:10.677000+00:00</td>\n",
-       "      <td>8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd</td>\n",
-       "      <td>8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd</td>\n",
-       "      <td>register_1013_tropicana</td>\n",
-       "      <td>Zack Soenen</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 run_id                         experiment_id  \\\n",
-       "0  93cf3817-78ea-43a4-bc25-4a1d367e288c  e7fcc503-1735-43d4-9298-1228018a7232   \n",
-       "\n",
-       "     status artifact_uri                       start_time  \\\n",
-       "0  FINISHED              2023-12-21 22:15:07.624000+00:00   \n",
-       "\n",
-       "                          end_time               tags.mlflow.parentRunId  \\\n",
-       "0 2023-12-21 22:15:10.677000+00:00  8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd   \n",
-       "\n",
-       "                  tags.mlflow.rootRunId      tags.mlflow.runName  \\\n",
-       "0  8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd  register_1013_tropicana   \n",
-       "\n",
-       "  tags.mlflow.user  \n",
-       "0      Zack Soenen  "
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Lookup registration job_id based on the parent run\n",
-    "mlflow.search_runs(experiment_names= EXPIREMENTS,\n",
-    "                   filter_string=\"tags.mlflow.parentRunId = '8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd'\"\n",
-    "                )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model version = 13\n"
+      "BEST MODEL VERSION: 13\n"
      ]
     }
    ],
    "source": [
-    "# Get version of the registered model based on the run_id\n",
+    "# Get best version of the registered model\n",
+    "df = mlflow.search_runs(experiment_names= EXPIREMENTS,\n",
+    "                   filter_string=\"tags.store = '1013' and \\\n",
+    "                                  tags.brand = 'tropicana' \"\n",
+    "                )\n",
+    "\n",
+    "best_run = df.loc[df['metrics.test_rmse'].idxmin()]['run_id']\n",
+    "\n",
+    "child_job_df = mlflow.search_runs(experiment_names= EXPIREMENTS, filter_string=\"tags.mlflow.parentRunId = '8e65bc4f-d3a9-4dce-9093-49c0e9fc3afd'\")\n",
+    "best_run = child_job_df.loc[child_job_df['tags.mlflow.parentRunId']== best_run, 'run_id'].values[0]\n",
+    "\n",
     "for model in ml_client.models.list(name=\"1013_tropicana\"):\n",
-    "    if(model.job_name == '93cf3817-78ea-43a4-bc25-4a1d367e288c'):\n",
-    "        print(f\"Model version = {model.version}\")"
+    "    if model.job_name == best_run:\n",
+    "        print(f'BEST MODEL VERSION: {model.version}')"
    ]
   },
   {
