updates to setup, next steps

--- a/demo_notebooks/0_setup.ipynb
+++ b/demo_notebooks/0_setup.ipynb
@@ -13,7 +13,7 @@
     "#### - Create and activate conda virtual env\n",
     "- Run the following bash commands via the terminal\n",
     "```bash\n",
-    "    conda env create --name many_models --file=../environment/conda.yaml\n",
+    "    conda env create --name many_models --file=../environment/local_conda.yaml\n",
     "    conda activate many_models\n",
     "    az login\n",
     "```\n",
@@ -89,16 +89,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mUploading test_subset_results.csv\u001b[32m (< 1 MB): 100%|██████████| 67.9k/67.9k [00:00<00:00, 499kB/s]\n",
+      "\u001b[39m\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Data({'skip_validation': False, 'mltable_schema_url': None, 'referenced_uris': None, 'type': 'uri_file', 'is_anonymous': False, 'auto_increment_version': False, 'auto_delete_setting': None, 'name': 'oj-sim-sales-test', 'description': 'Validation Set - Chicago area orange juice sales data', 'tags': {}, 'properties': {}, 'print_as_yaml': True, 'id': '/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/data/oj-sim-sales-test/versions/2023.12.20.161635', 'Resource__source_path': None, 'base_path': '/home/zacksoenen/Projects/many-models-azureml/demo_notebooks', 'creation_context': <azure.ai.ml.entities._system_data.SystemData object at 0x7f1eadad1a00>, 'serialize': <msrest.serialization.Serializer object at 0x7f1eadae7b80>, 'version': '2023.12.20.161635', 'latest_version': None, 'path': 'azureml://subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourcegroups/many-models-rg/workspaces/mm-aml-wksp/datastores/workspaceblobstore/paths/LocalUpload/724411e17666e66d19b8612b775b7707/test_subset.csv', 'datastore': None})"
+       "Data({'skip_validation': False, 'mltable_schema_url': None, 'referenced_uris': None, 'type': 'uri_file', 'is_anonymous': False, 'auto_increment_version': False, 'auto_delete_setting': None, 'name': 'oj-sim-sales-test-results', 'description': 'Results - Chicago area orange juice sales data', 'tags': {}, 'properties': {}, 'print_as_yaml': True, 'id': '/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/data/oj-sim-sales-test-results/versions/2023.12.27.045414', 'Resource__source_path': None, 'base_path': '/home/zacksoenen/Projects/many-models-azureml/demo_notebooks', 'creation_context': <azure.ai.ml.entities._system_data.SystemData object at 0x7fed4154deb0>, 'serialize': <msrest.serialization.Serializer object at 0x7fed41554940>, 'version': '2023.12.27.045414', 'latest_version': None, 'path': 'azureml://subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourcegroups/many-models-rg/workspaces/mm-aml-wksp/datastores/workspaceblobstore/paths/LocalUpload/022cdf720e21aee2a5d62c47634c3f3a/test_subset_results.csv', 'datastore': None})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,6 +121,14 @@
     "    type=AssetTypes.URI_FILE,\n",
     ")\n",
     "\n",
+    "results_data = Data(\n",
+    "    name=\"oj-sim-sales-test-results\",\n",
+    "    version=v1,\n",
+    "    description=\"Results - Chicago area orange juice sales data\",\n",
+    "    path=local_path + \"test_subset_results.csv\",\n",
+    "    type=AssetTypes.URI_FILE,\n",
+    ")\n",
+    "\n",
     "test_data = Data(\n",
     "    name=\"oj-sim-sales-test\",\n",
     "    version=v1,\n",
@@ -120,9 +137,11 @@
     "    type=AssetTypes.URI_FILE,\n",
     ")\n",
     "\n",
+    "\n",
     "# create data assets\n",
     "ml_client.data.create_or_update(train_data)\n",
-    "ml_client.data.create_or_update(test_data)"
+    "ml_client.data.create_or_update(test_data)\n",
+    "ml_client.data.create_or_update(results_data)"
    ]
   },
   {
@@ -279,6 +298,60 @@
     "df = pd.read_csv(data_asset.path)\n",
     "display(df.head(10))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **2. Create Compute Cluster**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Compute Target\n",
+    "\n",
+    "# Name assigned to the compute cluster\n",
+    "cpu_compute_target = \"mm-cpu-cluster\"\n",
+    "\n",
+    "try:\n",
+    "    # let's see if the compute target already exists\n",
+    "    cpu_cluster = ml_client.compute.get(cpu_compute_target)\n",
+    "    print(f\"You already have a cluster named {cpu_compute_target}, we'll reuse it as is.\")\n",
+    "\n",
+    "except Exception:\n",
+    "    print(\"Creating a new cpu compute target...\")\n",
+    "    cpu_cluster = AmlCompute(\n",
+    "        name=cpu_compute_target,\n",
+    "        # Azure Machine Learning Compute is the on-demand VM service\n",
+    "        type=\"amlcompute\",\n",
+    "        # VM Family\n",
+    "        size=\"STANDARD_DS3_V2\",\n",
+    "        # Minimum running nodes when there is no job running\n",
+    "        min_instances=0,\n",
+    "        # Nodes in cluster\n",
+    "        max_instances=10,\n",
+    "        # How many seconds will the node running after the job termination\n",
+    "        idle_time_before_scale_down=300, # 5 minutes\n",
+    "        # Dedicated or LowPriority. The latter is cheaper but there is a chance of job termination\n",
+    "        tier=\"Dedicated\",\n",
+    "    )\n",
+    "    cpu_cluster = ml_client.compute.begin_create_or_update(cpu_cluster)\n",
+    "    print(f\"Compute Cluster created: {cpu_cluster.name}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
