--- a/demo_notebooks/1_training_pipeline.ipynb
+++ b/demo_notebooks/1_training_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,51 +38,6 @@
     "    resource_group_name = os.environ.get('RESOURCE_GROUP_NAME'),\n",
     "    workspace_name = os.environ.get('WORKSPACE_NAME'),\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You already have a cluster named mm-cpu-cluster, we'll reuse it as is.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create Compute Target\n",
-    "\n",
-    "# Name assigned to the compute cluster\n",
-    "cpu_compute_target = \"mm-cpu-cluster\"\n",
-    "\n",
-    "try:\n",
-    "    # let's see if the compute target already exists\n",
-    "    cpu_cluster = ml_client.compute.get(cpu_compute_target)\n",
-    "    print(f\"You already have a cluster named {cpu_compute_target}, we'll reuse it as is.\")\n",
-    "\n",
-    "except Exception:\n",
-    "    print(\"Creating a new cpu compute target...\")\n",
-    "    cpu_cluster = AmlCompute(\n",
-    "        name=cpu_compute_target,\n",
-    "        # Azure Machine Learning Compute is the on-demand VM service\n",
-    "        type=\"amlcompute\",\n",
-    "        # VM Family\n",
-    "        size=\"STANDARD_DS3_V2\",\n",
-    "        # Minimum running nodes when there is no job running\n",
-    "        min_instances=0,\n",
-    "        # Nodes in cluster\n",
-    "        max_instances=10,\n",
-    "        # How many seconds will the node running after the job termination\n",
-    "        idle_time_before_scale_down=300, # 5 minutes\n",
-    "        # Dedicated or LowPriority. The latter is cheaper but there is a chance of job termination\n",
-    "        tier=\"Dedicated\",\n",
-    "    )\n",
-    "    cpu_cluster = ml_client.compute.begin_create_or_update(cpu_cluster)\n",
-    "    print(f\"Compute Cluster created: {cpu_cluster.name}\")"
    ]
   },
   {
@@ -112,7 +67,7 @@
     "    custom_job_env = Environment(\n",
     "        name=custom_env_name,\n",
     "        description=\"Custom environment for many models parallel training\",\n",
-    "        conda_file=\"../environment/training_env_conda.yaml\",\n",
+    "        conda_file=\"../environment/remote_env_conda.yaml\",\n",
     "        image=\"mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04\",\n",
     "    )\n",
     "    custom_job_env = ml_client.environments.create_or_update(custom_job_env)\n",
@@ -142,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,15 +107,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CommandComponent({'intellectual_property': None, 'auto_increment_version': False, 'source': 'REMOTE.WORKSPACE.COMPONENT', 'is_anonymous': False, 'auto_delete_setting': None, 'name': 'partition_data', 'description': None, 'tags': {}, 'properties': {}, 'print_as_yaml': True, 'id': '/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/components/partition_data/versions/1', 'Resource__source_path': None, 'base_path': '/home/zacksoenen/Projects/many-models-azureml/demo_notebooks', 'creation_context': <azure.ai.ml._restclient.v2022_10_01.models._models_py3.SystemData object at 0x7f032d31edc0>, 'serialize': <msrest.serialization.Serializer object at 0x7f032d331760>, 'command': 'python partition_data.py --data_source ${{inputs.data_source}} --partition_keys ${{inputs.partition_keys}} --tabular_output_data ${{outputs.tabular_output_data}}', 'code': '/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/codes/222a1914-01c0-482a-9f17-16c36d350d26/versions/1', 'environment_variables': None, 'environment': '/subscriptions/9a729243-1221-42c5-824c-9e44cb2da98d/resourceGroups/many-models-rg/providers/Microsoft.MachineLearningServices/workspaces/mm-aml-wksp/environments/CliV2AnonymousEnvironment/versions/ff5709b25edeee93f3a87055e0c8bf61', 'distribution': None, 'resources': {'instance_count': 1}, 'queue_settings': None, 'version': '1', 'latest_version': None, 'schema': 'https://azuremlschemas.azureedge.net/latest/commandComponent.schema.json', 'type': 'command', 'display_name': 'Partition input data by keys', 'is_deterministic': True, 'inputs': {'data_source': {'type': 'uri_file', 'optional': False}, 'partition_keys': {'type': 'string', 'optional': False}}, 'outputs': {'tabular_output_data': {'type': 'mltable'}}, 'yaml_str': None, 'other_parameter': {}, 'additional_includes': []})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Register customer data partition component\n",
+    "ml_client.components.create_or_update(partition_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load Azure pre-build component\n",
-    "ml_client_registry = MLClient(credential=credential, registry_name=\"azureml\")\n",
+    "'''ml_client_registry = MLClient(credential=credential, registry_name=\"azureml\")\n",
     "register_model_from_registry = ml_client_registry.components.get(\n",
     "    name=\"register_model\", label=\"latest\"\n",
-    ")"
+    ")'''"
    ]
   },
   {
@@ -205,15 +181,15 @@
     "    ),\n",
     "    input_data=\"${{inputs.data_source}}\",  # Define which input data will be splitted into mini-batches\n",
     "    partition_keys=[\"Store\",\"Brand\"],  # Use 'partition_keys' as the data division method. This method requires MLTable input with partition setting pre-defined in MLTable artifact.\n",
-    "    instance_count=6,  # Use 2 nodes from compute cluster to run this parallel job.\n",
+    "    instance_count=6,  # Use X nodes from compute cluster to run this parallel job.\n",
     "    max_concurrency_per_instance=2,  # Create 2 worker processors in each compute node to execute mini-batches.\n",
     "    error_threshold=-1,  # Monitor the failures of item processed by the gap between mini-batch input count and returns. 'Many model training' scenario doesn't fit this setting and '-1' means ignore counting failure items by mini-batch returns.\n",
     "    mini_batch_error_threshold=5,  # Monitor the failed mini-batch by exception, time out, or null return. When failed mini-batch count is higher than this setting, the parallel job will be marked as 'failed'.\n",
     "    retry_settings=dict(\n",
-    "        max_retries=2,  # Define how many retries when mini-batch execution is failed by exception, time out, or null return.\n",
+    "        max_retries=1,  # Define how many retries when mini-batch execution is failed by exception, time out, or null return.\n",
     "        timeout=60,  # Define the timeout in second for each mini-batch execution.\n",
     "    ),\n",
-    "    logging_level=\"DEBUG\",\n",
+    "    logging_level=\"DEBUG\", # DEBUG, INFO, WARNING, ERROR, ETC\n",
     "    environment_variables={\n",
     "        \"AZUREML_PARALLEL_EXAMPLE\": \"1a_sdk\",\n",
     "    },\n",
